--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,16 +1,16 @@
 // Typography
-$base-font-size: 14px !default;
+$base-font-size: 20px !default;
 $bold-font-weight: bold !default;
 $font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$line-height: 1.5 !default;
+$line-height: 1.4 !default;
 $heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
-$h1: 2.998rem !default;
-$h2: 1.5rem !default;
-$h3: 1.25rem !default;
-$h4: 1rem !default;
+$h1: 2.5rem !default;
+$h2: 1.3rem !default;
+$h3: 1.1rem !default;
+$h4: .76rem !default;
 $h5: .875rem !default;
 $h6: .75rem !default;
 $h00: 4rem !default;
