--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -4,7 +4,7 @@
 }
 
 .social-icons {
-  font-size: 1.25rem;
+  font-size: 1.4rem;
   padding: 0.5em 0 0 0;
   width: 100%;
 }
@@ -13,6 +13,8 @@
   cursor: pointer;
   opacity: 0.8;
   padding: 0.2em;
+  color: #333;
+  background-image: none;
 }
 
 .social-icons a.fa:hover {
