--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -25,3 +25,17 @@
   position: relative;
   top: 0.1em;
 }
+
+.share-links {
+  font-size: 1.2rem;
+  padding: 0.5em 0 0 0;
+  width: 100%;
+}
+
+.share-links a.fa {
+  cursor: pointer;
+  opacity: 0.8;
+  padding: 0.2em;
+  color: #333;
+  background-image: none;
+}
