Added a new page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -100,7 +100,12 @@
        ga('send', 'pageview');
     </script>
     {% endif %}
-    <!-- MathJax -->
+
+    {% if site.instagram_username %}
+      <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+      <script src="//lightwidget.com/widgets/lightwidget.js"></script>
+    {% endif %}
+
 
 
 </head>
