--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,7 @@
 {% for page in site.pages %}
+    {% if page.tags contains "instagram" %}
+        <a href="{{ page.url }}">{{ page.title }}</a>
+    {% endif %}
     {% if page.tags contains "about" %}
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
